Robustifie deploy errors.

--- a/roles/accountifie/templates/financifie.env.j2
+++ b/roles/accountifie/templates/financifie.env.j2
@@ -1,3 +1,3 @@
-FINANCIFIE_DB_PASSWORD={{ financifie_db_password }}
-FINANCIFIE_EMAIL_PASSWORD={{ financifie_email_password }}
+FINANCIFIE_DB_PASSWORD={{ accountifie_db_password }}
+FINANCIFIE_EMAIL_PASSWORD={{ accountifie_email_password }}
 EFIE_SERVER="yes"
